# python

python_playground/shoping-cart/: .gitignore  README.md  pyproject.toml
python_playground/shoping-cart/src/shopping_cart/domain/: cart.py  product.py
python_playground/shoping-cart/src/shopping_cart/service/: cart_service.py
python_playground/shoping-cart/tests/domain/: test_product.py
python_playground/shoping-cart/tests/service/: test_cart_service.py
python_playground/tryout/: notes.md
python_playground/tryout/src/: Hello.py
python_playground/tryout/src/inheritance/: animal.py  mangoos.py
