[project]
name = "shopping-cart"
version = "0.1.0"
description = "A shopping cart application for learning"
authors = [
    {name = "Arun Chakkaravarthi M",email = "dev.reachArun@gmail.com"}
]
packages = [
    {include = "shopping_cart", from = "src"}
]

readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]


[tool.ruff]
line-length = 120
lint.select = ["I00", "E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
addopts = "-s"  # Show print statements and stdout